Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Name</h1>
+<h1>Doug</h1>
+<h3>Profile</h3>
+<ul>
+<li>Started: 2025-02-04</li>
+<li>Role: Software Developer</li>
+<li>Hobbies: Reading, gaming, Reddit</li>
+</ui>
